crates/crochet/tests/fail/multiple_errors.error.txt
Error: Incompatible types
   ╭─[<unknown>:3:5]
   │
 1 │ let add = (a: number, b: number): number => a + b;
   ·               ──────  
   ·                        
   · 
 3 │ add("hello", "world");
   ·     ───┬───  
   ·        ╰───── This argument should be a number
───╯

Error: Incompatible types
   ╭─[<unknown>:4:5]
   │
 1 │ let add = (a: number, b: number): number => a + b;
   ·               ──────  
   ·                        
   · 
 4 │ add(true, false);
   ·     ──┬─  
   ·       ╰─── This argument should be a number
───╯
